--- a/examples/index.html
+++ b/examples/index.html
@@ -86,12 +86,11 @@ function renderLinePlot(div){
           return [deg, index/720*2];
         });
 
-    var container = div.datum(data)
-        .call(radialAxis);
+    // radialAxis.config({container: div})
+    // radialAxis(data);
 
-    var radialLinePlot = d3.custom.RadialLinePlot().axis(radialAxis);
-
-    container.call(radialLinePlot);
+    var radialLinePlot = d3.custom.RadialLinePlot().config({axis: radialAxis, container: div});
+    radialLinePlot(data);
 }
 
 function renderDotPlot(div){
@@ -111,12 +110,9 @@ function renderDotPlot(div){
           return [~~(scaleRandom(rndSnd()) * 1000), ~~(scaleRandom(rndSnd()) * 100)];
         });
 
-    var container = div.datum(data)
-        .call(radialAxis);
+    var radialDotPlot = d3.custom.RadialDotPlot().config({axis: radialAxis, container: div, dotRadius: 3});
+    radialDotPlot(data);
 
-    var radialDotPlot = d3.custom.RadialDotPlot().axis(radialAxis).config({dotRadius: 3});
-
-    container.call(radialDotPlot);
 }
 
 function renderCircularBarChart(div){
@@ -134,12 +130,8 @@ function renderCircularBarChart(div){
           return [deg * 50 + 50, ~~(Math.random() * index * 5 - 15)];
         });
 
-    var container = div.datum(data)
-        .call(radialAxis);
-
-    var circularBarChart = d3.custom.CircularBarChart().axis(radialAxis);
-
-    container.call(circularBarChart)
+    var circularBarChart = d3.custom.CircularBarChart().config({axis: radialAxis, container: div});
+    circularBarChart(data);
 }
 
 function renderPolarAreaChart(div){
@@ -147,7 +139,6 @@ function renderPolarAreaChart(div){
     var radialAxis = d3.custom.RadialAxis().config({
         height: 300, width: 300, 
         radialDomain: [0, 20], 
-        // angularDomain: ['North', '', '', '', 'East', '', '', '', 'South', '', '', '', 'West', '',  '', ''], 
         angularDomain: ['North', 'East', 'South', 'West'], 
         flip: true,
         originTheta: -90,
@@ -160,12 +151,8 @@ function renderPolarAreaChart(div){
           return [deg * 50 + 50, ~~(Math.random() * 10 + 5)];
         });
 
-    var container = div.datum(data)
-        .call(radialAxis);
-
-    var polarAreaChart = d3.custom.PolarAreaChart().axis(radialAxis);
-
-    container.call(polarAreaChart)
+    var polarAreaChart = d3.custom.PolarAreaChart().config({axis: radialAxis, container: div});
+    polarAreaChart(data);
 }
 
 function renderClock(div){
@@ -189,12 +176,8 @@ function renderClock(div){
           return [deg * 50 + 50, ~~(Math.random() * 15)];
         });
 
-    var container = div.datum(data)
-        .call(radialAxis);
-
-    var clock = d3.custom.Clock().axis(radialAxis);
-
-    container.call(clock);
+    var clock = d3.custom.Clock().config({axis: radialAxis, container: div});
+    clock(data);
 }
 
 var examples = [renderLinePlot, renderDotPlot, renderCircularBarChart, renderPolarAreaChart, renderClock];
